--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -2,3 +2,7 @@
 @import 'tailwindcss/base.css';
 @import 'tailwindcss/components.css';
 @import 'tailwindcss/utilities.css';
+
+body {
+  @apply font-sans;
+}
